# mff-student

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  QAReport.md  README.md  UNITY_README.md  alice_full.ld  example_class.pl  ladisti.py  lang_def.json  lansher.py  main.pl  main.rs  makefile  requirements.txt  template.tex
1718-1/programming_1/: tree_perms.cpp
1718-2/algorithms_and_data_structures_1/: du_2_zouhar.tex  (+11 more)
1819-1/: lines.py
Grewh2D/: CHANGELOG.md
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
algebra_1/: excercise1.tex  hw2.tex  hw4.tex  hw5.tex  hw6.tex  hw7.tex  hw8.tex
compiler_principles/: .gitignore  README.md
cs_src/: DataUtils.cs  DocReader.cs  Options.cs  Program.cs  Utils.cs
data/: hulth2003_all.7z
doc/: concept.md  technical_documentation.tex  user_doc.tex  user_guide.tex
doc_meta/: concept.md  file_format.md  ledger.md
engine/: makefile
include/: front.h  meta_system.h  tokenizer.h
introduction_computer_graphics/: exam.md
introduction_general_linguistics/: hw1.tex
language_data_resources/: .gitignore  TODO.md  questions.md
nlp_stat/: TEXTCZ1.txt  main.html  main.ipynb  part1.ipynb
py_src/: data_utils.py  doc_reader.py  main.py
speech_recognition_generation/: .gitignore  notes_exam.md  topics.md
src/: candidate.rs  compiler.cpp  data.py  data_utils.rs  doc_reader.rs  evaluator.py  features.py  front.cpp  main.cpp  main.py  main.rs  meta_system.cpp  model.py  tokenizer.cpp  utils.py
statistical_nlp/: main.ipynb
vm/: Dockerfile
web/: index.html
(+1575 files in other folders)
